--- a/form.index.html
+++ b/form.index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto formulario</title>
     <link rel="stylesheet" href="form.styles.css">
+    <script src="form.js"></script>
 </head>
 <body>
     <div id="Proyecto-Formulario"> 
