--- a/form.index.html
+++ b/form.index.html
@@ -14,7 +14,7 @@
         <div id="plant">  
             <img src="helecho (1).jpg" style="height: 610px;" alt="">
         
-         <div class="L-odin" style="; width: 380px; align-items: center; justify-content: center;">
+         <div class="L-odin" style=" width: 380px; align-items: center; justify-content: center;">
             <img src="Logo-odin-lined.jpeg" style="width: 80px; height: 95px;" alt="LOGO ODIN">
             <h4>ODIN</h4>
           <br> 
